# meme_generator

./: README.md  app.py  meme.py  pyproject.toml  requirements.txt
meme_engine/: __init__.py  meme_engine.py
quote_engine/: __init__.py  csv_ingestor.py  docx_ingestor.py  ingestor.py  ingestor_interface.py  pdf_ingestor.py  quote_model.py  text_ingestor.py  utils.py
templates/: base.html  meme.html  meme_form.html
